# VulkanRenderer_capi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: Renderer.cpp.A66717E1A50AA30C.idx  Renderer.h.0EEF7D3DD3D954AF.idx  main.cpp.0224085CFEEC36ED.idx  vulkan_utils.h.43C7738643386F38.idx
App/: CMakeLists.txt
App/Shaders/: shader.frag  shader.vert
App/src/App/: AppLayer.cpp  AppLayer.h  main.cpp
Core/: CMakeLists.txt
Core/src/Core/: Application.cpp  Application.h  Layer.h  Window.cpp  Window.h
Core/src/Core/Events/: Event.h  WindowEvents.h
Core/src/Renderer/: Renderer.cpp  Renderer.h
Core/src/Renderer/BufferManager/: BufferManager.cpp  UniformBufferManager.cpp  UniformBufferManager.h
Core/src/Renderer/Commands/: CommandManager.h
Core/src/Renderer/Common/: SwapchainSupportDetails.cpp  SwapchainSupportDetails.h  Vertex.h
Core/src/Renderer/Common/Images/: CreateImage.cpp
Core/src/Renderer/Core/: VulkanContext.cpp  VulkanContext.h
Core/src/Renderer/DescriptorManager/: DescriptorManager.cpp  DescriptorManager.h
Core/src/Renderer/Descriptors/: Descriptors.cpp  Descriptors.h
Core/src/Renderer/Meshes/: Mesh.cpp  Mesh.h
Core/src/Renderer/Pipeline/: Pipeline.cpp  Pipeline.h
Core/src/Renderer/RenderObjects/: ObjectManager.cpp  ObjectManager.h  RenderObject.h
Core/src/Renderer/RenderObjects/Mesh/: Mesh.cpp  Mesh.h
Core/src/Renderer/Swapchain/: Swapchain.cpp
Core/src/Renderer/Texture/: Texture.cpp  Texture.h
Core/src/Renderer/VulkanSyncObjects/: VulkanSyncObjects.cpp  VulkanSyncObjects.h
Core/src/Scene/Camera/: Camera.cpp  Camera.h
src/: Renderer.cpp  Renderer.h  main.cpp
src/Application/: Application.h
src/Renderer/: Renderer.h
src/Renderer/BufferManager/: BufferManager.cpp  BufferManager.h
src/Renderer/Commands/: CommandManager.cpp
src/Renderer/Common/: MemoryType.cpp  UniformBufferObject.h
src/Renderer/Common/CommandUtils/: CommandUtils.cpp  CommandUtils.h
src/Renderer/Common/Files/: readFile.cpp
src/Renderer/Common/Images/: CreateImage.cpp  CreateImage.h  TransitionImageLayout.cpp  TransitionImageLayout.h
src/Renderer/Common/MemoryType/: MemoryType.h
src/Renderer/Core/: VulkanContext.cpp
src/Renderer/DescriptorManager/: DescriptorManager.cpp  DescriptorManager.h
src/Renderer/Pipeline/: Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h
src/Renderer/Swapchain/: Swapchain.cpp  Swapchain.h
src/Renderer/Texture/: Texture.cpp  Texture.h
src/Renderer/core/: VulkanContext.cpp  VulkanContext.h
